--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,13 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    // https://mvnrepository.com/artifact/com.opencsv/opencsv
+    implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 }
